Bug 412341 - "clicking opened menuitem or combobox doesn't close menu" [p=kinetik@flim.org (Matthew Gregan) r+sr+a1.9=roc]